# SelfDriving

./: .gitignore  requirements.txt
AdvancedLaneFinding/AdvancedComputerVision/: AdvLaneFinding.ipynb
AdvancedLaneFinding/Project/: CarND-Advanced-Lane-Lines.ipynb  Project_final.ipynb  Project_v80519.ipynb  Projectv2.ipynb  Projectv3.ipynb
AdvancedLaneFinding/Python/: Camera_Calibration.ipynb
AdvancedLaneFinding/notes/: notes.tex
BehavioralCloning/Simulator/: clone.py  clone_generator.py  model.py
BehavioralCloning/TransferLearning/: TransferLearning_Inceptionv3.ipynb
ExtendedKalmanFilters/CarND-Extended-Kalman-Filter-Project/: README.md
ExtendedKalmanFilters/PrevPrograms/: Eigen_intro.cpp  KF_P1.cpp
ExtendedKalmanFilters/notes/: ExtKalmanFilter.tex
FindLaneLines/: images.cpp  lanelines.cpp  video.cpp
FindLanelines/: README.md
FindLanelines/Python/: LaneLineFinding.ipynb  LaneLineFinding_060519.ipynb  LaneLineFinding_v2.ipynb  lanelines.py
FindLanelines/cpp/: CMakeLists.txt
FindLanelines/notes/: notes.tex
TrafficSign/ConvolutionalNNets/: convnet.py  convnet_tf2.py  lenet.py
TrafficSign/DeepNNets/: dropout.py  load_vars.py  save_params.py  save_trained_model.py
TrafficSign/LeNet/: Traffic_Sign_Classifier-Copy1.ipynb  Traffic_Sign_Classifier-v2.html  Traffic_Sign_Classifier-v2.ipynb  Traffic_Sign_Classifier.ipynb  lenet.py  lenet_testing_model.py  v1_traffic_sign.ipynb
TrafficSign/TensorFlow/: epochs.py  linear_function.py  minibatch.py  numerical_stability.py  softmax.py  tensorflow_math.py
notes/: notes.tex
(+35 files in other folders)
